# model_checker

./: .gitignore  CMakeLists.txt  README.md  run-part1  run-part2  run_interpolation.sh  run_iter.sh  test1.txt
src/: CMakeLists.txt  aiger_parser.cc  aiger_parser.h  bmc.cc  bmc.h  circuit.cc  circuit.h  dimacs.cc  dimacs.h  formula.cc  formula.h  helper.cc  helper.h  interpolation.cc  interpolation.h  log.h  main.cc
src/minisat/: File.C  File.h
